# OpenBook-Browser

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  VERSION  security.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  phase0.yml  phase1.yml  release.yml
branding/: README.md
branding/openbook/: configure.sh  default-prefs.js
branding/openbook/content/: branding.json
branding/openbook/locales/en-US/: brand.ftl  brand.properties
branding/openbook/pref/: firefox-branding.js
ci/: README.md  mfsa-track.sh  release-pipeline.md  repro-diff.sh  sbom.sh
config/autoconfig/: README.md  autoconfig.js  openbook.cfg
config/distribution/: README.md  distribution.ini  policies.json
config/policies/: README.md  policies.json
docs/: BUILD.md  DECISIONS.md  OpenBook-Browser-Build-Plan.md  RELEASE-CHECKLIST.md  SECURITY.md  THREAT-MODEL.md
extensions/ai-sidebar/: README.md  jest.config.js  manifest.json  package-lock.json  package.json  settings.html  sidebar.css  sidebar.html
extensions/ai-sidebar/src/: actions.ts  promptguard.ts  registry.ts  settings.ts  sidebar.ts  storage.ts
extensions/ai-sidebar/src/__tests__/: actions.test.ts  promptguard.test.ts  providers.test.ts  registry.test.ts
extensions/ai-sidebar/src/providers/: byok.ts  ollama.ts  provider.ts
extensions/proxy-manager/: README.md  background.html  jest.config.js  manifest.json  package-lock.json  package.json  popup.css  popup.html
extensions/proxy-manager/src/: background.ts  failclosed.ts  leakcontrols.ts  popup.ts  proxy.ts  types.ts
extensions/proxy-manager/src/__tests__/: failclosed.test.ts  leakcontrols.test.ts
extensions/vault-ui/: README.md  background.html  lock.html  manifest.json  options.html  package-lock.json  package.json  setup.html  tsconfig.json  vault.css
extensions/vault-ui/src/: background.ts  lock.ts  lockstate.ts  options.ts  protocol.ts  setup.ts  ui.ts
extensions/vault-ui/src/__tests__/: lockstate.test.ts  manifest.test.ts  protocol.test.ts
native/vault-host/: Cargo.toml  README.md
native/vault-host/fuzz/: Cargo.toml
native/vault-host/fuzz/fuzz_targets/: dispatch.rs  parse_frame.rs
native/vault-host/manifests/: README.md  org.openbook.vault_host.json
native/vault-host/src/: counter.rs  engine.rs  error.rs  hardware.rs  kdf.rs  lib.rs  main.rs  protocol.rs  vault.rs
native/vault-host/tests/: protocol_robustness.rs  vault_integration.rs
native/vpn-helper/: Cargo.toml  README.md
native/vpn-helper/manifests/: org.openbook.vpn_helper.json
native/vpn-helper/src/: main.rs  protocol.rs
patches/: README.md  SERIES
patches/branding/: 0001-branding-add-openbook-brand-directory.patch  0001-use-openbook-branding.patch  0002-neutral-default-bookmarks-and-start.patch
patches/features/: 0001-allow-bundled-system-extensions.patch  0002-register-native-messaging-hosts.patch
patches/privacy/: 0001-remove-default-telemetry-endpoints.patch  0002-disable-pocket-component.patch
tests/extensions/: README.md  run.sh
tests/leak/: README.md  failclosed_sim.py  leak_assertions.py  test_first_run_egress.py
tests/native/: README.md  run.sh
tests/phase0/: test_phase0_structure.py
tests/phase1/: test_phase1_config.py
tests/privacy-regression/: FIRST_RUN_EGRESS.md  README.md  test_autoconfig_hardening.py  test_autoconfig_js.py  test_branding_assets.py  test_build_failclosed.py  test_mozconfig_branding.py  test_no_telemetry_endpoints.py  test_policies_json.py  test_policy_cfg_agreement.py
tests/release/: test_release_layer.py
tests/repro/: README.md  repro_diff.py  test_repro_diff.py
